# IME-565-CP-Spotify-API

./: .env.example  .gitignore  CLAUDE.md  IME565_Project_Proposal_Final.md  LICENSE  README.md  README_QUICK_START.md  Spotify.ipynb  api_mitigation.md  errors.md  install_deps.sh  main.py  pyproject.toml  quick_install.sh  requirements-mac.txt  requirements-windows.txt
app/: Home.py  README.md  main.py  spotify_dashboard.py
app/data/: spotify_facts.json
app/func/: __init__.py  auth.py  dashboard_helpers.py  data_collection.py  data_fetching.py  data_processing.py  datetime_utils.py  page_auth.py  s3_storage.py  ui_components.py  visualizations.py
app/pages/: 0_Data_Sync.py  1_Dashboard.py  2_Advanced_Analytics.py  3_Recent_Listening.py  4_Top_Tracks.py  5_Playlists.py  6_Deep_User.py  deep_user.py
data/: README.md
docs/: ARCHITECTURE.md  CLEANUP_RECOMMENDATIONS.md  DATA_ARCHITECTURE_RECOMMENDATION.md  DATA_STRATEGY_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  PRESENTATION_SPRINT_PLAN.md  PROJECT_STRUCTURE.md  PROMPT.md  QUICK_START_GUIDE.md  README.md  REORGANIZATION_SUMMARY.md  SESSION_LEARNINGS.md  SPOTIFY_API_CAPABILITIES.md  SPOTIFY_DATA_COLLECTION_GUIDE.md  TEMPORAL_FEATURES_GUIDE.md  USER_ANALYTICS_SURVEY.md  notes.md
notebooks/: 01_Phase1_EDA.ipynb  api_testing.ipynb  onetimeusertest.ipynb
scripts/: README.md  collect_spotify_data.py  enrich_with_audio_features.py  merge_team_data.py  spotify_auth.py
src/: __init__.py  data_processing.py  feature_engineering.py  visualization.py
tests/: test_r2_connection.py
