[project]
name = "spotify-analytics"
version = "0.1.0"
description = "Spotify analytics platform for IME 565 - Predictive Data Analytics for Engineers"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.28.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
    "kaleido>=0.2.1",
    "matplotlib>=3.7.0,<3.10.0",
    "notebook>=7.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0,<2.3.0",
    "plotly>=5.14.0,<5.25.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0,<1.6.0",
    "scipy>=1.10.0,<1.15.0",
    "seaborn>=0.12.0,<0.14.0",
    "spotipy>=2.23.0",
    "streamlit>=1.28.0,<1.40.0",
    "tenacity>=8.2.0",
]

[dependency-groups]
dev = []
